2mo_template/2mo-infra-no-api-gateway.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: test S3 bucket to upload images from front end 2mo (Mis Ma Ostsin) app.

Resources:
   # VPC Definition
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 2moVpc

  # Internet Gateway for Internet Access
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 2moIGW

  # Attach Gateway to VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnet for Resources
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: eu-central-1a


  PublicFallbackSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: eu-central-1b


  # Route Table for Public Access
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: 2moRouteTable

  # Default Route to Internet Gateway
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Route Table with Public Subnet
  RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable

# S3 Buckets for Recipt bucket where the images will be uploaded and the Bucket where the code.zip will be stored

  S3ReceiptBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: 2mo-receipt-images-mismaostsin-central
      VersioningConfiguration:
        Status: Enabled
      NotificationConfiguration:
        EventBridgeConfiguration:
          EventBridgeEnabled: true
    DeletionPolicy: Delete

  S3CodeBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: 2mo-code-storage-bucket-mismaostsin-central
      VersioningConfiguration:
        Status: Enabled
    DeletionPolicy: Delete

# Dead Letter Queue for failed lambda execution
  DLQ:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: LambdaDLQ

  # EC2 Instance for Running dbt (data transformation)
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: KEY-Central
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref SecurityGroupLambdaAndEc2toRDS
        # aws ec2 describe-images --owners amazon --filters "Name=name,Values=amzn2-ami-hvm-*" --query 'Images[*].[ImageId,Name]' --region eu-central-1 --output text
      ImageId: ami-00ac244ee0ad9050d  # amzn2-ami-hvm-2.0.20241014.0-x86_64-gp2
      IamInstanceProfile: !Ref EC2InstanceProfile
      # UserData: |
      #   #!/bin/bash
      #   # Update package lists and upgrade packages
      #   sudo apt update -y
      #   sudo apt upgrade -y
      #   # Install necessary dependencies
      #   sudo apt install -y python3 python3-venv python3-pip libmysqlclient-dev
      #   mkdir -p /home/ubuntu/dbt_project
      #   cd /home/ubuntu/dbt_project

      #   #  virtual environment
      #   python3 -m venv dbt-env
      #   source dbt-env/bin/activate
      #   pip install --upgrade pip

      #   # Install DBT with MySQL , MySQL client
      #   pip install dbt-mysql
      #   pip install mysqlclient

      #   # Deactivate the virtual environment
      #   deactivate
      #   # Ensure permissions for the Ubuntu user
      #   chown -R ubuntu:ubuntu /home/ubuntu/dbt_project
    DeletionPolicy: Delete

  


  # PostgreSQLRDS Instance for Data storage
  PostgreSQLRDS:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: data2mo
      DBInstanceClass: db.t3.micro
      Engine: postgres
      MasterUsername: 'admin2mo'
      MasterUserPassword: 'admin1234'
      AllocatedStorage: '20'
      VPCSecurityGroups:
        - !Ref SecurityGroupLambdaAndEc2toRDS
      DBSubnetGroupName: !Ref DBSubnetGroup
    DeletionPolicy: Delete

  
  #Lambda to fetch image from bucket, OCR the text and ingesting to the database in a raw form

  LambdaProcessReceipt:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: ProcessReceiptLambda
      Role: !GetAtt LambdaExecutionRole.Arn
      Runtime: python3.9
      Timeout: 900
      Handler: "index.lambda_handler"
      Code:
        ZipFile: |
          def lambda_handler(event, context):
              print('seems to be ok')  
              return {
                  "statusCode": 200,
                  "body": "Hello from Lambda"
              }
      DeadLetterConfig:
        TargetArn: !GetAtt DLQ.Arn
    DependsOn: 
      - LambdaExecutionRole
      - S3ReceiptBucket
      

# EB rule to invoke LambdaProcessReceipt when object is created in S3ReceiptBucket/uploads 

  EventBridgeRule:
    Type: AWS::Events::Rule
    Properties:
      Name: TriggerLambdaOnS3Upload
      EventPattern:
        source:
          - aws.s3
        detail-type:
          - "Object Created"
        detail:
          bucket:
            name:
              - "2mo-receipt-images-mismaostsin-central"
          object:
            key:
              - prefix: "uploads"
      Targets:
        - Arn: !GetAtt LambdaProcessReceipt.Arn
          Id: TargetLambda
    DependsOn:
      - LambdaProcessReceipt
      - S3ReceiptBucket


#THE FUN PART

 # Security Group for Lambda to access RDS via VPC
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Lambda to access RDS
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306 # MySQL port for RDS access
          ToPort: 3306
          SourceSecurityGroupId: !Ref SecurityGroupLambdaAndEc2toRDS

#  Lamdba setup to be able to ingest data, send message to SQS/SLQ and to get executed
  LambdaExecutionRole:
      Type: AWS::IAM::Role
      Properties:
        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Principal:
                Service: lambda.amazonaws.com
              Action: sts:AssumeRole
        Policies:
          - PolicyName: LambdaS3ToRDSPolicy
            PolicyDocument:
              Version: '2012-10-17'
              Statement:
                - Effect: Allow
                  Action:
                    - s3:GetObject
                  Resource: 
                    - !Sub arn:aws:s3:::2mo-receipt-images-mismaostsin-central/*
                - Effect: Allow
                  Action: "sqs:SendMessage"
                  Resource: !GetAtt DLQ.Arn
          - PolicyName: AWSLambdaBasicExecutionRole
            PolicyDocument:
              Version: '2012-10-17'
              Statement:
                - Effect: Allow
                  Action:
                    - logs:*
                  Resource: arn:aws:logs:*:*:*
                - Effect: Allow
                  Action:
                    - cloudwatch:PutMetricData
                  Resource: arn:aws:cloudwatch::aws:*e
          - PolicyName: TextractPolicy
            PolicyDocument:
              Version: '2012-10-17'
              Statement:
                - Effect: Allow
                  Action:
                    - textract:DetectDocumentText
                    - textract:StartDocumentTextDetection
                    - textract:GetDocumentTextDetection
                    - textract:AnalyzeDocument
                  Resource: 
                    - !Sub arn:aws:s3:::2mo-receipt-images-mismaostsin-central/*

  # EC2 Security Group to Access RDS
  SecurityGroupLambdaAndEc2toRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow EC2 to access RDS
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # Allow SSH access
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.0.0/16 # Allow Postgresql access from VPC

  #Iam role for EC2 instance for accessing RDS
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: ec2.amazonaws.com
      Policies:
        - PolicyName: EC2RolePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "rds:DescribeDBInstances"
                  - "rds:ExecuteStatement"
                Resource: "*"

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole        

 


   # DB Subnet Group for RDS
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      SubnetIds:
        - !Ref PublicSubnet
        - !Ref PublicFallbackSubnet
